--- a/style.css
+++ b/style.css
@@ -94,16 +94,17 @@ body {
 }
 
 .wrapper .right img {
-    width: 100%;
     height: 80%;
+    aspect-ratio: 1/1;
     margin-top: 20%;
     position: absolute;
     z-index: 50;
 }
 
 .wrapper .right .fullQr {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
+    margin: auto;
     opacity: .1;
     position: absolute;
     top: -3rem;
@@ -115,56 +116,61 @@ body {
 
 .wrapper .right .smallQr {
     position: absolute;
-    width: 30%;
+    /* width: 30%; */
     height: 30%;
+    aspect-ratio: 1/1;
     z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width:1000px) {
     .wrapper {
         flex-direction: column;
-        height: 150vh;
+        height: 200vh;
     }
 
     .wrapper .left {
         width: 80%;
+        height:100vh;
         align-items: center;
         position: relative;
         top:1rem;
     }
-
+    
     .wrapper .left p,
     h2 {
         text-align: center;
     }
 
-    .wrapper .right {
-        /* width: 60%; */
-        aspect-ratio: 1/1;
-    }
-
     .wrapper .left .qr-footer {
         justify-content: center;
     }
+
+    .wrapper .right {
+        height: 100vh;
+        aspect-ratio: 1/1;
+    }
+
 }
 
 @media screen and (max-width:600px) {
-    .wrapper {
-        flex-direction: column;
-        height: 200vh;
-        justify-content: space-between;
-    }
-    /* .wrapper .left{
-        height: 60vh;
-    } */
-    .wrapper .right {
-        width: 90%;
-        aspect-ratio: 1/1;
-        /* height: 90vh; */
-    }
     
     .wrapper .left .qr-footer {
         flex-direction: column;
         gap: 1rem;
     }
+
+    .wrapper .left {
+        width: 80%;
+        height:80vh;
+        align-items: center;
+    }
+
+    .wrapper .right{
+        height: 60vh;
+        aspect-ratio: 1/1;
+    }
+
 }
